--- a/Blatt 5/3/3.ipynb
+++ b/Blatt 5/3/3.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-10T17:46:30.942937Z",
-     "start_time": "2025-11-10T17:46:30.940471Z"
+     "end_time": "2025-11-17T10:10:25.045458Z",
+     "start_time": "2025-11-17T10:10:25.041419Z"
     }
    },
    "cell_type": "code",
@@ -36,8 +36,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-10T17:46:30.957661Z",
-     "start_time": "2025-11-10T17:46:30.955247Z"
+     "end_time": "2025-11-17T10:10:25.062075Z",
+     "start_time": "2025-11-17T10:10:25.059756Z"
     }
    },
    "cell_type": "code",
@@ -49,8 +49,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-10T17:46:30.972891Z",
-     "start_time": "2025-11-10T17:46:30.964226Z"
+     "end_time": "2025-11-17T10:10:25.091961Z",
+     "start_time": "2025-11-17T10:10:25.077362Z"
     }
    },
    "cell_type": "code",
@@ -109,11 +109,11 @@
     "c1          = lambda x,y: x+y == 3\n",
     "c1invert    = lambda x,y: y+x == 3\n",
     "\n",
-    "c2          = lambda x,y: x+y == 3\n",
-    "c2invert    = lambda x,y: y+x >= 3\n",
+    "c2          = lambda x,y: x+y <= 3\n",
+    "c2invert    = lambda x,y: y+x <= 3\n",
     "\n",
     "c3          = lambda x,y: x <= y\n",
-    "c3invert    = lambda x,y: y <= x\n",
+    "c3invert    = lambda x,y: y >= x\n",
     "\n",
     "c4          = lambda x,y: x != y\n",
     "c4invert    = lambda x,y: y != x\n",
@@ -174,7 +174,7 @@
      ]
     }
    ],
-   "execution_count": 386
+   "execution_count": 29
   },
   {
    "metadata": {},
@@ -185,8 +185,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-10T17:46:30.981309Z",
-     "start_time": "2025-11-10T17:46:30.978082Z"
+     "end_time": "2025-11-17T10:10:25.133712Z",
+     "start_time": "2025-11-17T10:10:25.129609Z"
     }
    },
    "cell_type": "code",
@@ -205,7 +205,7 @@
      ]
     }
    ],
-   "execution_count": 387
+   "execution_count": 30
   },
   {
    "metadata": {},
@@ -216,8 +216,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-10T17:46:30.997345Z",
-     "start_time": "2025-11-10T17:46:30.993116Z"
+     "end_time": "2025-11-17T10:10:25.182046Z",
+     "start_time": "2025-11-17T10:10:25.176834Z"
     }
    },
    "cell_type": "code",
@@ -230,12 +230,12 @@
        "(<N.V1: 'v1'>, <N.V2: 'v2'>)"
       ]
      },
-     "execution_count": 388,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 388
+   "execution_count": 31
   },
   {
    "metadata": {},
@@ -252,8 +252,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-10T17:46:31.010194Z",
-     "start_time": "2025-11-10T17:46:31.006237Z"
+     "end_time": "2025-11-17T10:10:25.225513Z",
+     "start_time": "2025-11-17T10:10:25.216466Z"
     }
    },
    "cell_type": "code",
@@ -274,12 +274,12 @@
        "True"
       ]
      },
-     "execution_count": 389,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 389
+   "execution_count": 32
   },
   {
    "metadata": {},
@@ -290,8 +290,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-10T17:46:31.026828Z",
-     "start_time": "2025-11-10T17:46:31.021958Z"
+     "end_time": "2025-11-17T10:10:25.253163Z",
+     "start_time": "2025-11-17T10:10:25.247452Z"
     }
    },
    "cell_type": "code",
@@ -323,7 +323,7 @@
      ]
     }
    ],
-   "execution_count": 390
+   "execution_count": 33
   },
   {
    "metadata": {},
@@ -334,8 +334,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-10T17:46:31.042643Z",
-     "start_time": "2025-11-10T17:46:31.038373Z"
+     "end_time": "2025-11-17T10:10:25.295353Z",
+     "start_time": "2025-11-17T10:10:25.290455Z"
     }
    },
    "cell_type": "code",
@@ -348,12 +348,12 @@
        "(<N.V2: 'v2'>, <N.V1: 'v1'>)"
       ]
      },
-     "execution_count": 391,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 391
+   "execution_count": 34
   },
   {
    "metadata": {},
@@ -364,8 +364,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-10T17:46:31.059652Z",
-     "start_time": "2025-11-10T17:46:31.055267Z"
+     "end_time": "2025-11-17T10:10:25.341187Z",
+     "start_time": "2025-11-17T10:10:25.335169Z"
     }
    },
    "cell_type": "code",
@@ -386,12 +386,12 @@
        "True"
       ]
      },
-     "execution_count": 392,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 392
+   "execution_count": 35
   },
   {
    "metadata": {},
@@ -402,8 +402,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-10T17:46:31.107669Z",
-     "start_time": "2025-11-10T17:46:31.103073Z"
+     "end_time": "2025-11-17T10:10:25.385357Z",
+     "start_time": "2025-11-17T10:10:25.380148Z"
     }
    },
    "cell_type": "code",
@@ -435,13 +435,13 @@
      ]
     }
    ],
-   "execution_count": 393
+   "execution_count": 36
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-10T17:46:31.131472Z",
-     "start_time": "2025-11-10T17:46:31.126693Z"
+     "end_time": "2025-11-17T10:10:25.453162Z",
+     "start_time": "2025-11-17T10:10:25.446197Z"
     }
    },
    "cell_type": "code",
@@ -454,18 +454,18 @@
        "(<N.V2: 'v2'>, <N.V3: 'v3'>)"
       ]
      },
-     "execution_count": 394,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 394
+   "execution_count": 37
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-10T17:46:31.152077Z",
-     "start_time": "2025-11-10T17:46:31.148177Z"
+     "end_time": "2025-11-17T10:10:25.487800Z",
+     "start_time": "2025-11-17T10:10:25.482561Z"
     }
    },
    "cell_type": "code",
@@ -489,13 +489,13 @@
      ]
     }
    ],
-   "execution_count": 395
+   "execution_count": 38
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-10T17:46:31.177209Z",
-     "start_time": "2025-11-10T17:46:31.172659Z"
+     "end_time": "2025-11-17T10:10:25.523492Z",
+     "start_time": "2025-11-17T10:10:25.514857Z"
     }
    },
    "cell_type": "code",
@@ -508,18 +508,18 @@
        "(<N.V3: 'v3'>, <N.V2: 'v2'>)"
       ]
      },
-     "execution_count": 396,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 396
+   "execution_count": 39
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-10T17:46:31.194689Z",
-     "start_time": "2025-11-10T17:46:31.190222Z"
+     "end_time": "2025-11-17T10:10:25.552859Z",
+     "start_time": "2025-11-17T10:10:25.547789Z"
     }
    },
    "cell_type": "code",
@@ -534,22 +534,22 @@
      "output_type": "stream",
      "text": [
       "--- Cv3 :v2 ---\n",
-      "v3.value = [0, 1, 2, 3, 4, 5]\n",
+      "v3.value = [0, 1, 2, 3]\n",
       "--- Nodes: ---\n",
       "v1 [0, 1, 2, 3]\n",
       "v2 [0, 1, 2, 3]\n",
-      "v3 [0, 1, 2, 3, 4, 5]\n",
+      "v3 [0, 1, 2, 3]\n",
       "v4 [0, 1, 2, 3, 4, 5]\n"
      ]
     }
    ],
-   "execution_count": 397
+   "execution_count": 40
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-10T17:46:31.212424Z",
-     "start_time": "2025-11-10T17:46:31.208022Z"
+     "end_time": "2025-11-17T10:10:25.587159Z",
+     "start_time": "2025-11-17T10:10:25.581155Z"
     }
    },
    "cell_type": "code",
@@ -562,18 +562,18 @@
        "(<N.V1: 'v1'>, <N.V3: 'v3'>)"
       ]
      },
-     "execution_count": 398,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 398
+   "execution_count": 41
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-10T17:46:31.237456Z",
-     "start_time": "2025-11-10T17:46:31.233523Z"
+     "end_time": "2025-11-17T10:10:25.621282Z",
+     "start_time": "2025-11-17T10:10:25.615944Z"
     }
    },
    "cell_type": "code",
@@ -592,18 +592,18 @@
       "--- Nodes: ---\n",
       "v1 [0, 1, 2, 3]\n",
       "v2 [0, 1, 2, 3]\n",
-      "v3 [0, 1, 2, 3, 4, 5]\n",
+      "v3 [0, 1, 2, 3]\n",
       "v4 [0, 1, 2, 3, 4, 5]\n"
      ]
     }
    ],
-   "execution_count": 399
+   "execution_count": 42
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-10T17:46:31.252285Z",
-     "start_time": "2025-11-10T17:46:31.248642Z"
+     "end_time": "2025-11-17T10:10:25.655138Z",
+     "start_time": "2025-11-17T10:10:25.649307Z"
     }
    },
    "cell_type": "code",
@@ -616,18 +616,18 @@
        "(<N.V3: 'v3'>, <N.V1: 'v1'>)"
       ]
      },
-     "execution_count": 400,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 400
+   "execution_count": 43
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-10T17:46:31.267480Z",
-     "start_time": "2025-11-10T17:46:31.263945Z"
+     "end_time": "2025-11-17T10:10:25.698123Z",
+     "start_time": "2025-11-17T10:10:25.689110Z"
     }
    },
    "cell_type": "code",
@@ -639,7 +639,7 @@
      "output_type": "stream",
      "text": [
       "--- Cv3 :v1 ---\n",
-      "v3.value = [0, 1, 2, 3, 4, 5]\n"
+      "v3.value = [0, 1, 2, 3]\n"
      ]
     },
     {
@@ -648,18 +648,18 @@
        "False"
       ]
      },
-     "execution_count": 401,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 401
+   "execution_count": 44
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-10T17:46:31.284410Z",
-     "start_time": "2025-11-10T17:46:31.280901Z"
+     "end_time": "2025-11-17T10:10:25.753092Z",
+     "start_time": "2025-11-17T10:10:25.745675Z"
     }
    },
    "cell_type": "code",
@@ -672,18 +672,18 @@
        "(<N.V3: 'v3'>, <N.V4: 'v4'>)"
       ]
      },
-     "execution_count": 402,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 402
+   "execution_count": 45
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-10T17:46:31.299830Z",
-     "start_time": "2025-11-10T17:46:31.295984Z"
+     "end_time": "2025-11-17T10:10:25.785369Z",
+     "start_time": "2025-11-17T10:10:25.779873Z"
     }
    },
    "cell_type": "code",
@@ -695,7 +695,7 @@
      "output_type": "stream",
      "text": [
       "--- Cv3 :v4 ---\n",
-      "v3.value = [0, 1, 2, 3, 4, 5]\n"
+      "v3.value = [0, 1, 2, 3]\n"
      ]
     },
     {
@@ -704,18 +704,18 @@
        "False"
       ]
      },
-     "execution_count": 403,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 403
+   "execution_count": 46
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-10T17:46:31.314432Z",
-     "start_time": "2025-11-10T17:46:31.310034Z"
+     "end_time": "2025-11-17T10:10:25.822005Z",
+     "start_time": "2025-11-17T10:10:25.816111Z"
     }
    },
    "cell_type": "code",
@@ -728,18 +728,18 @@
        "(<N.V4: 'v4'>, <N.V3: 'v3'>)"
       ]
      },
-     "execution_count": 404,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 404
+   "execution_count": 47
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-10T17:46:31.327306Z",
-     "start_time": "2025-11-10T17:46:31.323652Z"
+     "end_time": "2025-11-17T10:10:25.864287Z",
+     "start_time": "2025-11-17T10:10:25.859749Z"
     }
    },
    "cell_type": "code",
@@ -760,12 +760,12 @@
        "False"
       ]
      },
-     "execution_count": 405,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 405
+   "execution_count": 48
   },
   {
    "metadata": {},
@@ -776,8 +776,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-10T17:46:31.341948Z",
-     "start_time": "2025-11-10T17:46:31.338717Z"
+     "end_time": "2025-11-17T10:10:25.898794Z",
+     "start_time": "2025-11-17T10:10:25.894383Z"
     }
    },
    "cell_type": "code",
@@ -794,7 +794,7 @@
       "--- Nodes: ---\n",
       "v1 [0, 1, 2, 3]\n",
       "v2 [0, 1, 2, 3]\n",
-      "v3 [0, 1, 2, 3, 4, 5]\n",
+      "v3 [0, 1, 2, 3]\n",
       "v4 [0, 1, 2, 3, 4, 5]\n",
       "--- Queue: ---\n",
       "(<N.V3: 'v3'>, <N.V1: 'v1'>)\n",
@@ -802,13 +802,13 @@
      ]
     }
    ],
-   "execution_count": 406
+   "execution_count": 49
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-10T17:46:31.353379Z",
-     "start_time": "2025-11-10T17:46:31.349839Z"
+     "end_time": "2025-11-17T10:10:25.949912Z",
+     "start_time": "2025-11-17T10:10:25.943823Z"
     }
    },
    "cell_type": "code",
@@ -821,18 +821,18 @@
        "(<N.V3: 'v3'>, <N.V1: 'v1'>)"
       ]
      },
-     "execution_count": 407,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 407
+   "execution_count": 50
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-10T17:46:31.364233Z",
-     "start_time": "2025-11-10T17:46:31.360196Z"
+     "end_time": "2025-11-17T10:10:26.017875Z",
+     "start_time": "2025-11-17T10:10:26.011772Z"
     }
    },
    "cell_type": "code",
@@ -844,7 +844,7 @@
      "output_type": "stream",
      "text": [
       "--- Cv3 :v1 ---\n",
-      "v3.value = [0, 1, 2, 3, 4, 5]\n"
+      "v3.value = [0, 1, 2, 3]\n"
      ]
     },
     {
@@ -853,18 +853,18 @@
        "False"
       ]
      },
-     "execution_count": 408,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 408
+   "execution_count": 51
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-10T17:46:31.380277Z",
-     "start_time": "2025-11-10T17:46:31.375660Z"
+     "end_time": "2025-11-17T10:10:26.085682Z",
+     "start_time": "2025-11-17T10:10:26.079813Z"
     }
    },
    "cell_type": "code",
@@ -880,13 +880,13 @@
      ]
     }
    ],
-   "execution_count": 409
+   "execution_count": 52
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-10T17:46:31.392024Z",
-     "start_time": "2025-11-10T17:46:31.386628Z"
+     "end_time": "2025-11-17T10:10:26.143324Z",
+     "start_time": "2025-11-17T10:10:26.138686Z"
     }
    },
    "cell_type": "code",
@@ -899,18 +899,18 @@
        "(<N.V3: 'v3'>, <N.V2: 'v2'>)"
       ]
      },
-     "execution_count": 410,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 410
+   "execution_count": 53
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-10T17:46:31.431933Z",
-     "start_time": "2025-11-10T17:46:31.427699Z"
+     "end_time": "2025-11-17T10:10:26.219522Z",
+     "start_time": "2025-11-17T10:10:26.212851Z"
     }
    },
    "cell_type": "code",
@@ -922,7 +922,7 @@
      "output_type": "stream",
      "text": [
       "--- Cv3 :v2 ---\n",
-      "v3.value = [0, 1, 2, 3, 4, 5]\n"
+      "v3.value = [0, 1, 2, 3]\n"
      ]
     },
     {
@@ -931,18 +931,18 @@
        "False"
       ]
      },
-     "execution_count": 411,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 411
+   "execution_count": 54
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-10T17:46:31.446462Z",
-     "start_time": "2025-11-10T17:46:31.443213Z"
+     "end_time": "2025-11-17T10:10:26.352116Z",
+     "start_time": "2025-11-17T10:10:26.346837Z"
     }
    },
    "cell_type": "code",
@@ -957,13 +957,13 @@
      ]
     }
    ],
-   "execution_count": 412
+   "execution_count": 55
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-10T17:46:31.462952Z",
-     "start_time": "2025-11-10T17:46:31.460569Z"
+     "end_time": "2025-11-17T10:10:26.451206Z",
+     "start_time": "2025-11-17T10:10:26.448114Z"
     }
    },
    "cell_type": "code",
@@ -981,8 +981,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-10T17:46:31.478028Z",
-     "start_time": "2025-11-10T17:46:31.474612Z"
+     "end_time": "2025-11-17T10:10:26.496396Z",
+     "start_time": "2025-11-17T10:10:26.491606Z"
     }
    },
    "cell_type": "code",
@@ -996,12 +996,12 @@
       "--- Nodes: ---\n",
       "v1 [0, 1, 2, 3]\n",
       "v2 [0, 1, 2, 3]\n",
-      "v3 [0, 1, 2, 3, 4, 5]\n",
+      "v3 [0, 1, 2, 3]\n",
       "v4 [0, 1, 2, 3, 4, 5]\n"
      ]
     }
    ],
-   "execution_count": 413
+   "execution_count": 56
   }
  ],
  "metadata": {
