--- a/Blatt 6/3Advanced.ipynb
+++ b/Blatt 6/3Advanced.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T14:57:51.321805Z",
-     "start_time": "2025-11-22T14:57:51.312054Z"
+     "end_time": "2025-11-24T10:21:33.561877Z",
+     "start_time": "2025-11-24T10:21:31.584587Z"
     }
    },
    "cell_type": "code",
@@ -108,13 +108,13 @@
    ],
    "id": "aacf47ecf20f611f",
    "outputs": [],
-   "execution_count": 40
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T14:57:51.406272Z",
-     "start_time": "2025-11-22T14:57:51.326072Z"
+     "end_time": "2025-11-24T10:21:33.736Z",
+     "start_time": "2025-11-24T10:21:33.573810Z"
     }
    },
    "cell_type": "code",
@@ -132,13 +132,13 @@
      ]
     }
    ],
-   "execution_count": 41
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T14:57:51.920648Z",
-     "start_time": "2025-11-22T14:57:51.410367Z"
+     "end_time": "2025-11-24T10:21:34.545903Z",
+     "start_time": "2025-11-24T10:21:33.748527Z"
     }
    },
    "cell_type": "code",
@@ -156,13 +156,13 @@
      ]
     }
    ],
-   "execution_count": 42
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T14:57:58.375664Z",
-     "start_time": "2025-11-22T14:57:51.933352Z"
+     "end_time": "2025-11-24T10:21:46.259946Z",
+     "start_time": "2025-11-24T10:21:34.620131Z"
     }
    },
    "cell_type": "code",
@@ -180,13 +180,13 @@
      ]
     }
    ],
-   "execution_count": 43
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T14:57:58.796036Z",
-     "start_time": "2025-11-22T14:57:58.420214Z"
+     "end_time": "2025-11-24T10:21:46.891695Z",
+     "start_time": "2025-11-24T10:21:46.305782Z"
     }
    },
    "cell_type": "code",
@@ -204,19 +204,21 @@
      ]
     }
    ],
-   "execution_count": 44
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T14:58:05.010885Z",
-     "start_time": "2025-11-22T14:57:58.805941Z"
+     "end_time": "2025-11-24T10:22:50.611474Z",
+     "start_time": "2025-11-24T10:21:46.904332Z"
     }
    },
    "cell_type": "code",
    "source": [
     "t_m1000_d1000_lr01 = Experiment(m=1000,lr=0.1)\n",
-    "t_m1000_d1000_lr01.startTraining()"
+    "t_m1000_d1000_lr01.startTraining()\n",
+    "t_m10000_d1000_lr01 = Experiment(m=10000,lr=0.1)\n",
+    "t_m10000_d1000_lr01.startTraining()"
    ],
    "id": "7f5d2e4c633539d6",
    "outputs": [
@@ -224,11 +226,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Durchschnitt: 7.867, [Total:7867 by 1000 steps]\n"
+      "Durchschnitt: 7.867, [Total:7867 by 1000 steps]\n",
+      "Durchschnitt: 4.501, [Total:4501 by 1000 steps]\n"
      ]
     }
    ],
-   "execution_count": 45
+   "execution_count": 7
   }
  ],
  "metadata": {
