--- a/7/7.ipynb
+++ b/7/7.ipynb
@@ -71,13 +71,13 @@
    "execution_count": null,
    "source": [
     "# value z..b x2 = 1 + bias bzw\n",
-    "# h1 = sign(0*x1 + 1*x2 -3) = x2\n",
+    "# h1 = sign(0*x1 + 1*x2 -3) = x2 - 3\n",
     "# h2 = sign(1*x1 + 0*x2 - 2) =  x1 - 2\n",
     "# h11 = sign( 1*h1 + 1*h2, 1)\n",
     "\n",
     "# beipsiele x1 x2\n",
     "# 2 3  h1 = (3-3) = 0 (sign(0) = 1), h2 = (2-2) = 0 |  + 1 = 1 somit klasse 1\n",
-    "# 3 4  h1 = (3-3) = 0, h2 = (4-2) = 2 |  + 1 = 3 somit klasse 1\n",
+    "# 4 3  h1 = (3-3) = 0, h2 = (4-2) = 2 |  + 1 = 3 somit klasse 1\n",
     "# 1 1  h1 = (1-3) = -2, h2 = (1-2) = -1 | + 1 = -2 somit klasse -1\n",
     "\n",
     "\n"
